# geany-lsp

./: .gitignore  CMakeLists.txt  README.md  client.c  client.h  geany-lsp.c  geany-lsp.json  lsp.json  lspdoc.c  lspdoc.h  lspfeature.c  lspfeature.h  utils.c  utils.h
